6913869: Zero assert fix

Zero currently won't build on zSeries or PowerPC machines with assertions turned on.

Reviewed-by: twisti